// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default listeners loads with default buildError listener: console error 1`] = `
Array [
  Array [
    [Error: Uncaught Error],
  ],
]
`;

exports[`default listeners loads with default buildError listener: console log 1`] = `
Array [
  Array [
    "
[1mwebpack-compiler-plugin:[22m 🚒 build failed",
  ],
]
`;

exports[`default listeners loads with default buildError listener: process exit 1`] = `
Array [
  Array [
    1,
  ],
]
`;

exports[`default listeners loads with default interrupt listener: console error 1`] = `Array []`;

exports[`default listeners loads with default interrupt listener: console log 1`] = `
Array [
  Array [
    "
[1mwebpack-compiler-plugin:[22m 🚧 build interrupted",
  ],
]
`;

exports[`default listeners loads with default interrupt listener: process exit 1`] = `
Array [
  Array [
    2,
  ],
]
`;

exports[`stage messages does not use default state messages buildStart 1`] = `Array []`;

exports[`stage messages does not use default state messages compileEnd 1`] = `Array []`;

exports[`stage messages does not use default state messages compileStart 1`] = `Array []`;

exports[`stage messages uses default state messages buildStart 1`] = `
Array [
  Array [
    "
webpack-compiler-plugin: 🌅 build starting",
  ],
]
`;

exports[`stage messages uses default state messages compileEnd 1`] = `
Array [
  Array [
    "
webpack-compiler-plugin: ⌛ code compiled",
  ],
]
`;

exports[`stage messages uses default state messages compileStart 1`] = `
Array [
  Array [
    "
webpack-compiler-plugin: ⏳ code compiling",
  ],
]
`;
